@@ -71,17 +71,22 @@ announcemsg syntax.
 
 AS=\
 Command : AS\n\r\
-Usage   : AS [PLAYERNAME/MOBNAME] (HERE) [COMMAND]\n\r\
+Usage   : AS [PLAYERNAME/MOBNAME]/(PORT X) (HERE) [COMMAND]\n\r\
 Example : as "bob" inventory\n\r\
 Example : as bob here drop all\n\r\
 Example : as bob cast fireball monster\n\r\
+Example : as post 2325 list users\n\r\
 Short(s): \n\r\
 A command that allows one to issue other commands as if they \
 were another player or mob.  This is the best way to manage \
 a players inventory or bank accounts from the command line. \
 The optional "here" parameter should follow the name if the \
 command is to be issued with the player in the same room as the \
-archon.
+archon. The optional "port x" parameter can be used to execute \
+commands on other mud hosts, so long as the admin qualifies as a SysOp \
+on the target port.\n\r\
+\n\r\
+
 
 ASYNC=\
 Command : ASYNC\n\r\
