@@ -39,6 +39,7 @@ See guides/RandomAreas.html for information about documents of this type.
 	<string condition="$template='random'"                                               >normal_mystery1</string>
 	<string condition="$template='random'"                                               >normal_mystery2</string>
 	<string condition="$template='random'"                                               >normal_protect1</string>
+	<string condition="$template='random' and $avoidscans!='YES'"                        >normal_protect2</string>
 	<string condition="$template='random' and $avoidscans!='YES'"                        >normal_travel1</string>
 	<string condition="$template='random' and $avoidscans!='YES'"                        >normal_travel2</string>
 </string>
